tools: experiment with multiple GC algorithms, use a low latency one as all tested perform equally good and low latency is good for UI